--- a/stack.yaml
+++ b/stack.yaml
@@ -17,8 +17,8 @@
 #
 # snapshot: ./custom-snapshot.yaml
 # snapshot: https://example.com/snapshots/2024-01-01.yaml
-snapshot:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/24/19.yaml
+
+snapshot: nightly-2025-11-15
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,8 +39,14 @@ packages:
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
-#
-# extra-deps: []
+
+extra-deps:
+  - yaftee-0.1.0.0
+  - yaftee-basic-monads-0.1.0.0
+  - higher-order-freer-monad-0.1.0.0
+  - higher-order-open-union-0.1.0.1
+  - freer-base-classes-0.1.0.0
+  - ftcqueue-0.1.0.1
 
 # Override default flag values for project packages and extra-deps
 # flags: {}
