--- a/yaftee-conduit.cabal
+++ b/yaftee-conduit.cabal
@@ -6,7 +6,9 @@ cabal-version: 2.2
 
 name:           yaftee-conduit
 version:        0.1.0.0
+synopsis:       Conduit implemented on Yaftee
 description:    Please see the README on GitHub at <https://github.com/YoshikuniJujo/yaftee-conduit#readme>
+category:       Control
 homepage:       https://github.com/YoshikuniJujo/yaftee-conduit#readme
 bug-reports:    https://github.com/YoshikuniJujo/yaftee-conduit/issues
 author:         Yoshikuni Jujo
@@ -17,6 +19,7 @@ license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     README.md
+extra-doc-files:
     CHANGELOG.md
 
 source-repository head
@@ -25,7 +28,10 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Control.Monad.Yaftee.Pipe
+      Control.Monad.Yaftee.Pipe.IO
+      Control.Monad.Yaftee.Pipe.List
+      Control.Monad.Yaftee.Pipe.Tools
   other-modules:
       Paths_yaftee_conduit
   autogen-modules:
@@ -35,20 +41,11 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
-  default-language: Haskell2010
-
-executable yaftee-conduit-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_yaftee_conduit
-  autogen-modules:
-      Paths_yaftee_conduit
-  hs-source-dirs:
-      app
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
-    , yaftee-conduit
+    , ftcqueue ==0.1.*
+    , higher-order-freer-monad ==0.1.*
+    , higher-order-open-union ==0.1.*
+    , yaftee ==0.1.*
+    , yaftee-basic-monads ==0.1.*
   default-language: Haskell2010
 
 test-suite yaftee-conduit-test
@@ -63,5 +60,10 @@ test-suite yaftee-conduit-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , ftcqueue ==0.1.*
+    , higher-order-freer-monad ==0.1.*
+    , higher-order-open-union ==0.1.*
+    , yaftee ==0.1.*
+    , yaftee-basic-monads ==0.1.*
     , yaftee-conduit
   default-language: Haskell2010
